--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">      
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="node_modules/swup/dist/swup.js"></script>      
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/world.png">
