--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="node_modules/swup/dist/swup.js"></script>      
-    <script defer src="app.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/world.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -65,7 +65,7 @@
 
     </header>
 
-    <main id="swup" class="transition-fade">
+    <main>
         <h1>MISENHEIMER.</h1> 
     </main>
 
