--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
     </footer>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
+    </script>
 </body>
 
 
