--- a/music.html
+++ b/music.html
@@ -70,6 +70,6 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
-   <script src="app.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
