--- a/music.html
+++ b/music.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">        
-    <link rel="stylesheet" href="https://blooming-atoll-24295.herokuapp.com/style.css">
-    <link rel="icon" href="https://blooming-atoll-24295.herokuapp.com/images/world.png">
+    <base href="https://blooming-atoll-24295.herokuapp.com/">    
+    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/images/world.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
    
     <title>Misenheimer | Music</title>
@@ -70,6 +71,6 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
-   <script src="https://blooming-atoll-24295.herokuapp.com/index.js"></script>
+   <script src="/index.js"></script>
 </body>
 </html>
