--- a/public/about.html
+++ b/public/about.html
@@ -69,6 +69,6 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
-   <script src="/public/script.js"></script>
+   <script src="/script.js"></script>
 </body>
 </html>
