--- a/public/index.html
+++ b/public/index.html
@@ -71,19 +71,19 @@
                 <div class="hmove">
                     <div class="hitem">MISENHEIMER HAS 3 NEW SINGLES!!! &nbsp;&nbsp;&nbsp;</div>
                     <div class="hitem">YES!&nbsp;&nbsp;&nbsp;</div>
-                    <div class="hitem">CLICK BUTTON BELOW TO CHECK IT OUT.</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; SPOTIFY, APPLE MUSIC, AND OTHER ONES.</div>
+                    <div class="hitem">CLICK BUTTON BELOW TO LISTEN NOW!</div>
+                    <div class="hitem">&nbsp;&nbsp;&nbsp; ON SPOTIFY, APPLE MUSIC, AND OTHER ONES.</div>
                     <div class="hitem">&nbsp;&nbsp;&nbsp; YES!&nbsp;&nbsp;&nbsp; MISENHEIMER IS ON THE NET! </div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; AVAILABLE TO THOSE WITH WORLD WIDE WEB ACCESS.</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON MOBILE TELEPHONE,</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; OR ON IPODS.</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON STEREO MOUNTED TO UNDERSIDE OF GRANDMA'S KITCHEN CABINETS.....UNDER WHERE MUGS ARE.</div>
+                    <div class="hitem">&nbsp;&nbsp;&nbsp; WORLD WIDE WEB ACCESS.</div>
+                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON MOBILE TELEPHONE!</div>
+                    <div class="hitem">&nbsp;&nbsp;&nbsp; OR ON IPOD!</div>
+                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON STEREO MOUNTED TO UNDERSIDE OF KITCHEN CABINET.</div>
                 </div>
             </div>
             <div class="card1"><img src="/images/mom-resized.jpg" alt="city street" class="single-cover"></div>
             <div class="card2"><img src="/images/Instagram/Nago.JPG" alt="mother and baby" class="single-cover"></div>
             <div class="card3"><img src="/images/breakfast.jpg" alt="brother and sister" class="single-cover"></div>
-            <div class="card4"><button class="listen-btn"><a href="#">Listen Now.</a></button></div>
+            <div class="card4"><button class="listen-btn"><a href="#">LISTEN NOW</a></button></div>
         </div>
     </main>
 
