--- a/public/index.html
+++ b/public/index.html
@@ -80,9 +80,21 @@
                     <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON STEREO MOUNTED TO UNDERSIDE OF KITCHEN CABINET.</div>
                 </div>
             </div>
-            <div class="card1"><img src="/images/mom-resized.jpg" alt="city street" class="single-cover"></div>
-            <div class="card2"><img src="/images/Instagram/Nago.JPG" alt="mother and baby" class="single-cover"></div>
-            <div class="card3"><img src="/images/breakfast.jpg" alt="brother and sister" class="single-cover"></div>
+
+
+            <div class="card1">
+                <img src="/images/mom-resized.jpg" alt="mother and baby" class="single-cover">
+            </div>
+
+            <div class="card2">
+                <img src="/images/Nago.jpg" alt="city street" class="single-cover">
+            </div>
+
+            <div class="card3">
+                <img src="/images/breakfast.jpg" alt="brother and sister" class="single-cover">
+            </div>
+
+
             <div class="card4"><button class="listen-btn"><a href="#">LISTEN NOW</a></button></div>
         </div>
     </main>
