--- a/public/index.html
+++ b/public/index.html
@@ -64,39 +64,32 @@
     </header>
 
     <main>
+        
         <h1>MISENHEIMER.</h1> 
 
-        <div class="card-container">
-            <div class="card-header">
-                <div class="hmove">
-                    <div class="hitem">MISENHEIMER HAS 3 NEW SINGLES!!! &nbsp;&nbsp;&nbsp;</div>
-                    <div class="hitem">YES!&nbsp;&nbsp;&nbsp;</div>
-                    <div class="hitem">CLICK BUTTON BELOW TO LISTEN NOW!</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; ON SPOTIFY, APPLE MUSIC, AND OTHER ONES.</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; YES!&nbsp;&nbsp;&nbsp; MISENHEIMER IS ON THE NET! </div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; WORLD WIDE WEB ACCESS.</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON MOBILE TELEPHONE!</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; OR ON IPOD!</div>
-                    <div class="hitem">&nbsp;&nbsp;&nbsp; LISTEN ON STEREO MOUNTED TO UNDERSIDE OF KITCHEN CABINET.</div>
-                </div>
+        
+        <div class="news-container">
+            <h3 class="news-heading">Latest News</h3>
+
+            <div class="news-card">
+
+                <div class="news-image">
+                    <img src="/images/Scream1000.jpg" alt="kid in halloween mask"> 
+                </div>   
+
+                <div class="news-body">
+                    <ul class="news-list">
+                        <li class="news-item">February 23, 2022</li>
+                        <li class="news-item headline">Misenheimer announces release: "Here's One" - EP (2022).</li>
+                        <li class="news-item"><a href="#">Read More &#8594;</a></li>
+                    </ul>
+                </div>    
+
             </div>
 
-
-            <div class="card1">
-                <img src="/images/mom-resized.jpg" alt="mother and baby" class="single-cover">
-            </div>
-
-            <div class="card2">
-                <img src="/images/Nago.jpg" alt="city street" class="single-cover">
-            </div>
-
-            <div class="card3">
-                <img src="/images/breakfast.jpg" alt="brother and sister" class="single-cover">
-            </div>
-
-
-            <div class="card4"><button class="listen-btn"><a href="#">LISTEN NOW</a></button></div>
         </div>
+
+
     </main>
 
     <footer>
