--- a/public/music.html
+++ b/public/music.html
@@ -64,9 +64,9 @@
     </header>
 
     <main>
-        <h1>MUSIC</h1>
+        <h1>MISENHEIMER</h1>
 
-        <div class="music-card-container">
+        <div class="music-card-container transition-fade" id="swup">
 
             <h3 class="container-heading">Releases</h3>
 
@@ -101,6 +101,7 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
+   <script src="/node_modules/swup/dist/swup.min.js"></script>
    <script src="/script.js"></script>
 </body>
 </html>
