--- a/public/tour.html
+++ b/public/tour.html
@@ -63,12 +63,19 @@
     </header>
 
     <main>
-        <h1>TOUR.</h1>
+        <h1>MISENHEIMER</h1>
+
+        <div class="music-card-container transition-fade" id="swup">
+
+            <h3 class="container-heading">There are no upcoming tour dates.</h3>
+            
+        </div>
     </main>
     
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
+   <script src="/node_modules/swup/dist/swup.min.js"></script>
    <script src="/script.js"></script>
 </body>
 </html>
