--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         <h1>MISENHEIMER.</h1> 
 
         
-        <div class="news-container transition-fade" id="swup">
+        <div class="news-container">
             <h3 class="news-heading">Latest News</h3>
 
             <div class="news-card">
@@ -96,7 +96,7 @@
         <p>&copy; Misenheimer 2022</p>
         
     </footer>
-    <script src="/node_modules/swup/dist/swup.min.js"></script>
+
     <script src="/script.js"></script>
 
 </body>
