--- a/public/music.html
+++ b/public/music.html
@@ -66,7 +66,7 @@
     <main>
         <h1>MISENHEIMER</h1>
 
-        <div class="music-card-container transition-fade" id="swup">
+        <div class="music-card-container">
 
             <h3 class="container-heading">Releases</h3>
 
@@ -101,7 +101,6 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
-   <script src="/node_modules/swup/dist/swup.min.js"></script>
    <script src="/script.js"></script>
 </body>
 </html>
