--- a/public/tour.html
+++ b/public/tour.html
@@ -65,7 +65,7 @@
     <main>
         <h1>MISENHEIMER</h1>
 
-        <div class="music-card-container transition-fade" id="swup">
+        <div class="music-card-container">
 
             <h3 class="container-heading">There are no upcoming tour dates.</h3>
             
@@ -75,7 +75,6 @@
     <footer>
         <p>&copy; Misenheimer 2022</p>
    </footer>
-   <script src="/node_modules/swup/dist/swup.min.js"></script>
    <script src="/script.js"></script>
 </body>
 </html>
