--- a/public/contact.html
+++ b/public/contact.html
@@ -82,7 +82,7 @@
                     <textarea type="text" name="message" placeholder="MESSAGE" required></textarea>
                     <button type="submit">SEND</button>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://www.misenheimer.art">
+                    <input type="hidden" name="_next" value="https://misenheimer.art">
                </form>
             </div>
             
